# notion-hugo-flow

./: .dockerignore  .env.example  .env.sample  .gitignore  CONFIG_DOCUMENTATION.md  DEVELOPMENT.md  LICENSE  NESTED_BLOCK_DEPTH_FIX.md  NOTION_HUGO_README.md  PIPELINE_PROGRESS_DASHBOARD.md  PROJECT_NAME_PROPOSAL.md  README.md  app.py  config.yaml  notion-hugo.config.enhanced.yaml  notion-hugo.config.yaml  notion_hugo_app.py  pyproject.toml  requirements.txt  setup.py  vercel.json  vercel_setup.py  vercel_setup_enhanced.py
.github/workflows/: hugo.yml  notion-hugo-deploy-optimized.yml  notion-hugo-deploy.yml
blog/: config.yaml  notion-hugo.config.yaml
blog/config/_default/: config.yml
blog/content/posts/: 2025-08-08-how-to-use-your-notion-hugo-blog.md  2025-08-08-welcome-to-your-new-blog.md  2025-08-08-시작하기---첫-번째-블로그-포스트.md
blog/public/: 404.html  index.html  index.xml  sitemap.xml
blog/public/categories/: index.html  index.xml
blog/public/categories/technology/: index.html  index.xml
blog/public/page/1/: index.html
blog/public/posts/: index.html  index.xml
blog/public/tags/: index.html  index.xml
blog/src/: base_pipeline.py  deploy.py  hugo.py  notion.py  pipeline.py
blog/src/config/: deployment.yaml  hugo.yaml  notion.yaml
blog/src/deployment/: __init__.py  config.py
blog/src/hugo/: __init__.py  config.py  pipeline.py
blog/src/notion/: __init__.py  config.py  pipeline.py
dev/: CONFIG_DOCUMENTATION.md  Dockerfile  QUICK_SETUP_GUIDE.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  requirements.prod.txt  test_github_timeout.py
dev/docs/: DATABASE_ID_SECURITY_GUIDE.md  DB_ID_UX_IMPROVEMENTS.md  EXPERT_RECOMMENDATIONS.md  NOTION_ID_GUIDE.md  SETUP_GUIDE.md  USERAGENT_SPECIFICATION.md  USER_SCENARIOS_AND_FLOW.md  UX_ANALYSIS_AND_IMPROVEMENTS.md  branch-naming-policy.md  cache-cleanup-guide.md  internal-roadmap.md  notion-hugo-property-mapping-analysis.md  slack_webhook_sample.md  user-agent copy.md
dev/docs/pipeline-redesign/: ADVANCED_SCENARIOS.md  AI_SUPERVISED_IMPLEMENTATION_STRATEGY.md  NEW_PIPELINE_ARCHITECTURE.md  OBJECTIVE_FUNCTION_IMPLEMENTATION_PLAN.md  PIPELINE_REDESIGN_HANDOFF.md  PIPELINE_SPECIFICATIONS.md  README.md
dev/scripts/: cleanup-legacy-files.sh  force-full-rebuild.sh  github-pages-setup.sh
docs/: DATABASE_ID_SECURITY_GUIDE.md  LANGUAGE_STYLE_GUIDE.md  ONE_STOP_INSTALLATION_GUIDE.md
scripts/: quickstart-github.sh  slack_notify.sh
site_backup/public/: sitemap.xml
site_backup/public/categories/: index.xml
site_backup/public/posts/: index.html  index.xml
site_backup/public/tags/: index.html  index.xml
src/: __init__.py  __main__.py  app.py  cli.py  config.py  config_enhanced.py  config_validator.py  create_gitmodules.py  hugo_integration.py  hugo_processor.py  hugo_setup.py  index.py  metadata.py  notion_hugo.py  notion_setup.py  render.py  setup.py  smart_config.py
src/config/: .content-processor-state.json  .notion-hugo-state.example.json  __init__.py  config.py  env_mapper.py  manager.py  notion-hugo-config.example.yaml  notion-hugo-config.yaml  notion-hugo-config.yaml.clean  schema.py  smart_config.py  unified_config.py
src/deploy/: deployment_manager.py  pipeline.py
src/hugo/: __init__.py  content_processor.py  hugo_integration.py  hugo_processor.py  hugo_setup.py  integration.py
src/notion/: __init__.py  config.py  notion_api.py  notion_setup.py  property_mapper.py
src/utils/: __init__.py  cli_utils.py  config_validator.py  file_utils.py  helpers.py
(+233 files in other folders)
